[project]
name = "fastapi-sqlalchemy-asyncpg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "redis>=7.0.0",
    "rotoger>=0.1.1",
]
